# SoftRasterRenderer

./: CMakeLists.txt  README.md
src/: main.cpp
src/Math/: Vector.h
src/Rasterizer/: Rasterizer.cpp  Rasterizer.h
